# zusik

./: .config.yaml.swp  .editorconfig  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.yaml  main.py  pyproject.toml  requirements.txt  security_lock.py  security_manifest.json  setup.sh
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  security.yml
deploy/: setup_service.sh  zusik-calibrate.service  zusik-calibrate.timer  zusik-notify-failure.service  zusik-watchdog.service  zusik-watchdog.timer  zusik.service
docs/: ARCHITECTURE.md  CONFIGURATION.md  LLM.md  LOCAL_LLM.md  LOGS_AND_REPORTS.md  SETUP.md  TESTING.md
docs/examples/: monthly_report_example.html  results_report_example.html
scripts/: ambiguous_review.py  backtest_profit_mechanisms.py  calibrate_from_history.py  cmd.py  configtool.py  crash_hold_review.py  earnings_backtest.py  entry_roi.py  fix_agy_auth.sh  missed_surge_review.py  monthly_report.py  notify_failure.py  notify_update.py  realtime_probe.py  release-to-public.sh  results_report.py  selection_alpha_review.py  sell_timing_review.py  verify_profit.py  watchdog.py
scripts/hooks/: pre-commit
tests/: test_bot.py  test_claude_analyst_judge.py  test_claude_analyst_parse.py  test_claude_analyst_support.py  test_claude_client_codex.py
zusik/: __init__.py  paths.py
zusik/analysis/: auto_screener.py  backtest.py  fix_effect.py  (+12 more)
(+57 files in other folders)
